--- a/css/styleCadastroCliente.css
+++ b/css/styleCadastroCliente.css
@@ -35,7 +35,7 @@ h2{
     background-image: url("blackboard.jpg");
     color:rgb(227, 227, 227);
     position: absolute;
-    top: 80%;
+    top: 85%;
     left: 50%;
     transform: translate(-50%,-50%);
     padding: 30px;
@@ -54,6 +54,16 @@ h2{
     margin-bottom: 10px;
     padding: 10px;
     width: 70%;
+    font-size: 15px;
+}
+
+.input2{
+    border: none;
+    border-radius: 5px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    padding: 10px;
+    width: 45%;
     font-size: 15px;
 }
 
@@ -83,7 +93,7 @@ h2{
     border-radius: 20px;
     width: 7%;
     padding: 10px;
-    margin-top: 55%;
+    margin-top: 62%;
     background-color: rgb(63, 103, 177);
     color:azure;
     font-weight: bolder;
